--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.13",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eslint": "^8.42.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "postcss": "^8.4.19",
