--- a/.github/workflows/check-linting.yml
+++ b/.github/workflows/check-linting.yml
@@ -33,5 +33,5 @@ jobs:
         uses: ninosaurus/eslint-check@v5
         with:
           eslint-config-path: "./.eslintrc.json"
-          custom-directory: ""
+          custom-directory: "/"
           repo-token: ${{secrets.GITHUB_TOKEN}}
