--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "eslint": "^6.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +42,9 @@
     "autoprefixer": "^10.4.13",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "postcss": "^8.4.19",
