--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -1,4 +1,4 @@
-name: Check linting on changed files in PR
+name: Run linting on changed files in PR
 
 on: [pull_request]
 
@@ -14,7 +14,7 @@ jobs:
           node-version: 14
 
       - name: Install dependencies
-        run: npm ci  # OR: yarn 
+        run: npm i  # OR: yarn 
 
       - name: Run eslint on changed files
         uses: tj-actions/eslint-changed-files@v19
