--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Run eslint on changed files
         uses: tj-actions/eslint-changed-files@v19
         with:
-          config_path: "/.eslintrc.json"
+          config_path: "/.eslintrc.js"
           ignore_path: "/.eslintignore"
           extra_args: "--max-warnings=0"
           file_extensions: |
