--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -23,5 +23,5 @@ jobs:
           ignore_path: "/.eslintignore"
           extra_args: "--max-warnings=0"
           file_extensions: |
-            **/*.ts
-            **/*.tsx
+            **/*.js
+            **/*.jsx
