--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,7 @@
         {
           "ignore": [
             "^meteor/",
+            "^src/",
             "^/",
             "simpl-schema"
           ]
