--- a/.github/workflows/run-linting.yml
+++ b/.github/workflows/run-linting.yml
@@ -1,27 +1,22 @@
-name: Run linting on changed files in PR
+name: Lint
 
-on: [pull_request]
+on:
+  pull_request:
 
 jobs:
-  lint:
+  eslint:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm i  # OR: yarn 
-
-      - name: Run eslint on changed files
-        uses: tj-actions/eslint-changed-files@v19
+          node-version: 16
+      - name: ESLint Code Review
+        uses: yousufkalim/eslint-action@latest
         with:
-          config_path: "./.eslintrc.json"
-          ignore_path: "./.eslintignore"
-          extra_args: "--max-warnings=0"
-          file_extensions: |
-            **/*.js
-            **/*.jsx
+          github-token: ${{ secrets.GITHUB_TOKEN }} # Optional
+          eslint-args: '--ignore-path=./.eslintignore'
+          eslintrc: true # Set this to true if you want to use your own .eslintrc rules
+          extensions: 'js,jsx,ts,tsx'
+          auto-auto-fix-before-test: false # Set this to true if want to format and fix all the lint issue before testing
+          annotations: true
